src-ken&y/objects/Budget_Line1__c.object
<CustomObject>
    <customHelpPage>HelpBudgetLine</customHelpPage>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Unique__c</fullName>
        <label>Budget Line Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>GL Account is not enabled for budgeting.</errorMessage>
            <filterItems>
                <field>GL_Account__c.Include_in_Budgets__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Budget Lines (Intercompany)</relationshipLabel>
        <relationshipName>Budget_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Period Company must match Company</errorMessage>
            <filterItems>
                <field>Period__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company</fullName>
        <active>true</active>
        <errorConditionFormula>Company__c  &lt;&gt; Budget__r.Company__c</errorConditionFormula>
        <errorDisplayField>Company__c</errorDisplayField>
        <errorMessage>Budget Line Company must equal Budget Company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Intercompany</fullName>
        <active>true</active>
        <errorConditionFormula>Company__c  =  Intercompany__c</errorConditionFormula>
        <errorDisplayField>Intercompany__c</errorDisplayField>
        <errorMessage>Intercompany cannot be the same as Company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Period</fullName>
        <active>true</active>
        <errorConditionFormula>(Period__r.Period_Start__c &lt;  Budget__r.Budget_From__r.Period_Start__c) || (Period__r.Period_Start__c &gt;= Budget__r.Budget_To__r.Period_End__c)</errorConditionFormula>
        <errorDisplayField>Period__c</errorDisplayField>
        <errorMessage>Period Start Date cannot be less than the Budget From Period Start or greater than or equal to the Budget To Period End</errorMessage>
    </validationRules>
</CustomObject>